@@ -58,50 +58,53 @@ public class TestStandardHashiCorpVaultCommunicationService {
         Files.deleteIfExists(authProps.toPath());
     }
 
-    private HashiCorpVaultCommunicationService configureService() {
+    private StandardHashiCorpVaultCommunicationService configureService() {
         return new StandardHashiCorpVaultCommunicationService(properties);
     }
 
     @Test
-    public void testBasicConfiguration() {
-        this.configureService();
+    public void testBasicConfiguration() throws Exception {
+        try (StandardHashiCorpVaultCommunicationService ignored = this.configureService()) {
+            // Once to check if the URI is https, once by VaultTemplate, once by RestTemplate, and once to validate
+            Mockito.verify(properties, Mockito.times(4)).getUri();
 
-        // Once to check if the URI is https, once by VaultTemplate, and once to validate
-        Mockito.verify(properties, Mockito.times(3)).getUri();
-
-        // Once to check if the property is set, and once to retrieve the value
-        Mockito.verify(properties, Mockito.times(2)).getAuthPropertiesFilename();
+            // Once to check if the property is set, and once to retrieve the value
+            Mockito.verify(properties, Mockito.times(2)).getAuthPropertiesFilename();
+        }
     }
 
     @Test
-    public void testTimeouts() {
+    public void testTimeouts() throws Exception {
         when(properties.getConnectionTimeout()).thenReturn(Optional.of("20 secs"));
         when(properties.getReadTimeout()).thenReturn(Optional.of("40 secs"));
-        this.configureService();
+        try (StandardHashiCorpVaultCommunicationService ignored = this.configureService()) {
+            // Intentionally empty
+        }
     }
 
     @Test
     public void testListKeyValueSecretsRecursesNestedPaths() throws Exception {
         when(properties.getKvVersion()).thenReturn(2);
 
-        final StandardHashiCorpVaultCommunicationService service = (StandardHashiCorpVaultCommunicationService) this.configureService();
+        try (StandardHashiCorpVaultCommunicationService service = this.configureService()) {
 
-        final VaultTemplate vaultTemplate = Mockito.mock(VaultTemplate.class);
-        final VaultKeyValueOperations keyValueOperations = Mockito.mock(VaultKeyValueOperations.class);
+            final VaultTemplate vaultTemplate = Mockito.mock(VaultTemplate.class);
+            final VaultKeyValueOperations keyValueOperations = Mockito.mock(VaultKeyValueOperations.class);
 
-        final Field vaultTemplateField = StandardHashiCorpVaultCommunicationService.class.getDeclaredField("vaultTemplate");
-        vaultTemplateField.setAccessible(true);
-        vaultTemplateField.set(service, vaultTemplate);
+            final Field vaultTemplateField = StandardHashiCorpVaultCommunicationService.class.getDeclaredField("vaultTemplate");
+            vaultTemplateField.setAccessible(true);
+            vaultTemplateField.set(service, vaultTemplate);
 
-        final Field keyValueBackendField = StandardHashiCorpVaultCommunicationService.class.getDeclaredField("keyValueBackend");
-        keyValueBackendField.setAccessible(true);
-        final KeyValueBackend keyValueBackend = (KeyValueBackend) keyValueBackendField.get(service);
+            final Field keyValueBackendField = StandardHashiCorpVaultCommunicationService.class.getDeclaredField("keyValueBackend");
+            keyValueBackendField.setAccessible(true);
+            final KeyValueBackend keyValueBackend = (KeyValueBackend) keyValueBackendField.get(service);
 
-        when(vaultTemplate.opsForKeyValue("kv", keyValueBackend)).thenReturn(keyValueOperations);
-        when(keyValueOperations.list("/")).thenReturn(Arrays.asList("test", "nested/"));
-        when(keyValueOperations.list("nested/")).thenReturn(List.of("nifi"));
+            when(vaultTemplate.opsForKeyValue("kv", keyValueBackend)).thenReturn(keyValueOperations);
+            when(keyValueOperations.list("/")).thenReturn(Arrays.asList("test", "nested/"));
+            when(keyValueOperations.list("nested/")).thenReturn(List.of("nifi"));
 
-        final List<String> secrets = service.listKeyValueSecrets("kv", keyValueBackend.name());
-        assertEquals(Arrays.asList("test", "nested/nifi"), secrets);
+            final List<String> secrets = service.listKeyValueSecrets("kv", keyValueBackend.name());
+            assertEquals(Arrays.asList("test", "nested/nifi"), secrets);
+        }
     }
 }
